fix: clickable whitespace around the hero button

--- a/001-recipes/style/style.css
+++ b/001-recipes/style/style.css
@@ -13,6 +13,9 @@
 img {
   box-sizing: content-box;
 }
+a {
+  text-decoration: none;
+}
 
 body {
   background-color: whitesmoke;
@@ -24,6 +27,7 @@ body {
   background-color: #2a5846;
   font-family: Arial, Verdana, sans-serif;
   line-height: 1.3;
+  text-align: center;
 }
 
 h1 {
@@ -34,20 +38,15 @@ h1 {
 .main p {
   font-size: 24px;
   color: whitesmoke;
-  text-align: center;
 }
 
-a {
-  text-decoration: none;
-}
-
-button {
+.main button {
   background-color: rgb(11, 153, 99);
   color: white;
   width: auto;
-  display: block;
+  display: inline-block;
   padding: 10px;
-  margin: 2rem auto;
+  margin: 2rem 0 0 0;
   font-size: 16px;
   border: none;
   border-radius: 10px;
